--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo">Jacqueline Mae</a>
+        <a href="" class="logo">Jacqui Mae</a>
 
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Store</a>
-            <a href="#">Contact</a>
+            <a href="https://jacqui.live">Home</a>
+            <a href="https://jacqui.live/about">About</a>
+            <a href="https://jacqui.live/store">Store</a>
+            <a href="https://jacqui.live/contact">Contact</a>
         </nav>
     </header>
 <div>
