--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Jacqui</title>
+    <title>About | Jacqui Mae</title>
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +18,12 @@
             <a href="https://jacqui.live/contact">Contact</a>
         </nav>
     </header>
+<div>
+    <video autoplay loop muted plays-inline class="background-video">
+        <source src="assets/images/city.mp4" type="video/mp4">
+    </video>
+</div>
+
 <div>
     <p style="text-align: left;"><h1>About</h1></p>
     <p style="text-align: left;"></p><h3>About me.</h3></p>
