--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png"/>
     <title>Home | Jacqui Mae</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +20,7 @@
     </header>
 <div>
     <video autoplay loop muted plays-inline class="background-video">
-        <source src="assets/images/background.mp4" type="video/mp4">
+        <source src="assets/images/ocean.mp4" type="video/mp4">
     </video>
    <div class="content">
         <h1>jacqui.live</h1>
